# toylang

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
compiler/: cli.ts  lexicon.tsx  regex.tsx
episode-0/: script.md
episode-1-1/: script.md
episode-1-2/: script.md
episode-1-3/: 000.surface.tsx  001.introduce.tsx  002.cmd.json  002.data.json  002.principle.tsx  002.state_machine.cmd.json  002.state_machine.data.json  002.state_machine.tsx  index.ts  script.md  sections.json
include/toylang/: anim.h  lexical.h  regex.h  source.h  token.h
script/: build  clean  configure  emit  setup
src/: anim.cpp  lexical.cpp  main.cpp  regex.cpp  source.cpp  token.cpp
test/: lexical.cpp
